Testing with arm

--- a/transactional/Makefile
+++ b/transactional/Makefile
@@ -2,25 +2,29 @@ CC=gcc
 CFLAGS=-pthread -fgnu-tm 
 
 STM=tinySTM/lib/libstm.a
+SOURCES=$(wildcard *.c)
+HEADERS=$(wildcard *.h)
+PROGS=$(patsubst %.c,%,$(SOURCES))
+
 
 UNAME := $(shell uname -a)
 ifeq ($(findstring x86_64,$(UNAME)),x86_64)
     CFLAGS += -mcx16
+    ARCH = intel
 endif
 
 ifeq ($(findstring armv7l,$(UNAME)),armv7l)
     CFLAGS += -march=armv7-a
 endif
 
-SOURCES=$(wildcard *.c)
-HEADERS=$(wildcard *.h)
-PROGS=$(patsubst %.c,%,$(SOURCES))
 
+all: $(PROGS) $(ARCH)
 
-all: $(PROGS) intel
-
-%: %.c $(STM) $(HEADERS)
+array_tinystm: array_tinystm.c $(STM) $(HEADERS)
 	- $(CC) $(CFLAGS) -o $@ $< $(STM)
+
+%: %.c $(HEADERS)
+	- $(CC) $(CFLAGS) -o $@ $< 
 
 $(STM):
 	mkdir -p tinySTM/lib
